fixed styles for scrollbar

--- a/src/components/MainDashboard/MainDashboard.module.css
+++ b/src/components/MainDashboard/MainDashboard.module.css
@@ -3,17 +3,17 @@
   display: flex;
   gap: 34px;
   overflow: auto;
-  }
+}
 
 @media screen and (min-width: 768px) {
   .board {
-    padding: 0 32px 52px 32px;
+    padding: 0 32px 24px 32px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .board {
-    padding: 0 24px 16px 24px;
+    padding: 0 24px 24gitpx 24px;
   }
 }
 
